--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "types": "dist/types.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "exports": {
     ".": "./src/index.js",
@@ -32,6 +34,8 @@
   },
   "homepage": "https://github.com/patrickpff/global-docs-br#readme",
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "@vitest/coverage-v8": "^4.0.16",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   }
 }
