excluded unit test files from compile and building validation/tests for oab and proccess cnj number

--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "@vitest/coverage-v8": "^4.0.16",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
+  },
+  "vitest": {
+    "include": ["src/**/*.spec.ts"],
+    "exclude": ["node_modules", "dist"]
   }
 }
