--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": [
+        "**/*.spec.ts",
+        "**/__tests__/**"
+    ]
 }
