--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
   },
   "homepage": "https://github.com/patrickpff/global-docs-br#readme",
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
   "vitest": {
-    "include": ["src/**/*.spec.ts"],
-    "exclude": ["node_modules", "dist"]
+    "include": [
+      "src/**/*.spec.ts"
+    ],
+    "exclude": [
+      "node_modules",
+      "dist"
+    ]
   }
 }
