--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es2020",
+        "target": "es2022",
         "module": "nodenext",
-        "lib": ["ES2020"],
-        "declaration": true,
+        "moduleResolution": "nodenext",
+
+        "lib": ["ES2022"],
+
+        "types": ["node", "vitest/globals"],
+        
         "outDir": "dist",
         "rootDir": "src",
-        "moduleResolution": "nodenext",
+
+        "declaration": true,
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true
