roraima IE added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Brazilian document validators and formatters for global-docs",
   "type": "module",
   "main": "dist/index.js",
-  "types": "dist/types.js",
+  "types": "dist/index.d.js",
   "scripts": {
     "build": "tsc",
     "test": "vitest",
@@ -23,9 +23,22 @@
     "global-docs",
     "documents",
     "brazil",
-    "cpf",
+    "cau",
+    "cnh",
     "cnpj",
-    "validation"
+    "cpf",
+    "crc",
+    "crea",
+    "crm",
+    "cro",
+    "ie",
+    "oab",
+    "passport",
+    "process-cnj",
+    "rg",
+    "voter-registration",
+    "validation",
+    "mask"
   ],
   "author": "Patrick Ferreira",
   "license": "MIT",
