--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,28 +2,31 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-  steps:
-    - name: Checkout repository
-      uses: actions/chackout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: "npm"
-    
-    - name: Install dependencies
-      run: npm ci
 
-    - name: Run Tests
-      run: npm run test:run
+    steps:
+      - name: Checkout repository
+        uses: actions/chackout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run tests with coverage
-      run: npm run test:coverage
+      - name: Run Tests
+        run: npm run test:run
+
+      - name: Run tests with coverage
+        run: npm run test:coverage
