--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,12 @@
         "rootDir": "src",
 
         "declaration": true,
+        "declarationMap": true,
         "esModuleInterop": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+
+        "forceConsistentCasingInFileNames": true
     },
     "include": ["src"],
     "exclude": [
